<?xml version="1.0" encoding="utf-8" ?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent">
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="vertical">
		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/sections_title"
			android:textSize="16sp" android:textStyle="bold" android:gravity="center" />
		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="" />
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/sections_1_title"
			android:textStyle="bold" />
		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/sections_1_desc" />
		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="" />
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/sections_2_title"
			android:textStyle="bold" />
		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/sections_2_desc" />
		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="" />
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/sections_3_title"
			android:textStyle="bold" />
		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/sections_3_desc" />
		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="" />
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/sections_4_title"
			android:textStyle="bold" />
		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/sections_4_desc" />
		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="" />
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/sections_5_title"
			android:textStyle="bold" />
		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/sections_5_desc" />
		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="" />
		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/sections_6_title"
			android:textStyle="bold" />
		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="" />
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/sections_7_title"
			android:textStyle="bold" />
		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/sections_7_desc" />
		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="" />
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/sections_8_title"
			android:textStyle="bold" />
		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/sections_8_desc" />
	</LinearLayout>
</ScrollView>