<?xml version="1.0" encoding="utf-8" ?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent">
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="vertical">
		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/about_popup_name"
			android:textSize="16sp" android:textStyle="bold" android:gravity="center" />
		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="" />
		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/about_popup_desc"
			android:gravity="center" />
		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="" />
		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/about_popup_licence"
			android:gravity="center" />
	</LinearLayout>
</ScrollView>